Fixed alignment text (added font)

--- a/primary.css
+++ b/primary.css
@@ -21,7 +21,11 @@
     src: url("fonts/BauhausBold.ttf") format("opentype");
 }
 
-
+@font-face
+{
+    font-family: SeuratPro;
+    src: url("fonts/FOT-Seurat\ Pro\ B.otf") format("opentype");
+}
 
 .marioEsque
 {
@@ -72,7 +76,13 @@ html, body
 #titleRegularBlack
 {
     font-family: BauhasRegular, "Gill Sans", sans-serif;
+    font-size: 25px;
     color: #020202;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+}
+
+#normalRegularBlack
+{
+    font-family: SeuratPro, "Gill Sans", sans-serif;
+    color: #020202;
 }
